# yaah-template

./: Cargo.toml  README.md  cargo-generate.toml
.cargo/: config.toml
benches/: aoc-bench.rs
src/: lib.rs  main.rs
