[package]
name = "{{ crate_name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
repository = "https://github.com/username/{{project-name}}"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaah = { version = "0.2.1" }
clap = { version = "4.0", features = ["derive"] }
{% if with_benchmarks %}
criterion = "0.4"
{% endif %}
